# casaGeoTools

./: .editorconfig  .gitignore  CHANGELOG.md  README.md  Taskfile  pyproject.toml
.github/workflows/: python-build.yml  python-package.yml  python-release.yml
casageo/: coder.py  spatial.py
casageo/tools/: __init__.py  _apiv2.py  _client.py  _consts.py  _errors.py  _types.py  _util.py
docs/source/: casageo.coder.rst  casageo.spatial.rst  casageo.tools.rst  conf.py  index.rst
examples/: beta_example_script.py
tests/: generate_fixtures.py  smoke_test.py  test_coder.py  test_spatial.py
tests/fixtures/: coder_address_simple_query.json  coder_poi_simple_query.json  spatial_isolines_simple_query.json  spatial_routes_simple_query.json
